# pytorch_incremental_pca

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
tests/: benchmark_gram.py  test_backends.py  test_incremental_pca_basic.py  test_regression.py  test_sklearn_equivalence.py
torch_incremental_pca/: __init__.py  incremental_pca.py
