[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-incremental-pca"
version = "0.0.16"
authors = [
  { name="Lukas Hauzenberger", email="lukas.hauzenberger@gmail.com" },
]
description = "A PyTorch implementation of Incremental PCA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch", "numpy"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pre-commit>=3.5.0",
    "black>=23.1.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "scikit-learn"
]
